--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mazegenerator",
   "version": "1.0.0",
   "description": "Vanilla JS web app that generates mazes of various sizes.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "set NODE_ENV=development && npm run server"
   },
   "repository": {
     "type": "git",
