--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/MaciejReimann/MazeGenerator/issues"
   },
-  "homepage": "https://github.com/MaciejReimann/MazeGenerator#readme"
+  "homepage": "https://github.com/MaciejReimann/MazeGenerator#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
+  }
 }
