--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Vanilla JS web app that generates mazes of various sizes.",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js",
     "start": "node server.js",
-    "dev": "set NODE_ENV=development && npm run server"
+    "test": "jest --watch",
+    "server": "nodemon server.js",
+    "build": "cd public && browserify scripts/index.js -o bundle.js",
+    "dev": "set NODE_ENV=development && npm run build && npm run server",
+    "locally": "npm i && npm run dev",
+    "publish": "git push -u origin master && git push heroku master && heroku open"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,7 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "jest": "^23.6.0",
     "nodemon": "^1.18.6"
   }
 }
